develop - application.properties for discovery-service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 
+# Default port for eureka server is 8761 out of the box
+server.port=8761
+
+# If client service wants to communicate with another client service,
+# it will first have to fetch registry stored in Eureka discovery service.
+# Hence fetch-registry is set to true in properties of client microservices 
+# whereas fetch-registry is set to false in case of eureka service as 
+# eureka server itself holds all the client services registry 
+# and it does not need to fetch them with itself. 
+# If we still set fetch-registry=true for discovery service, 
+# we will get connection exception in console logs but discovery service will still be up.
+eureka.client.fetch-registry=false
+
+#Eureka server has a built-in Eureka client also. As in production, 
+# generally there is a cluster of Eureka servers and they register among themselves as client. 
+# But we are running the server on the localhost and we don’t need a cluster. 
+# So we need to switch off the client's behavior so that it doesn't try to register itself. 
+# If we still set it to true we will get conection refused in console logs but discovery server will stil be up.
+eureka.client.register-with-eureka=false
+
+# Default zone URL is service URL of eureka server itself. If we change the default port of eureka server from 8761 to 5555 
+# and do not specify defaultZone URL and check UI of localhost:5555 (we changes port from 8761 to 5555), 
+# we will see that in General Info section, registered-replicas and unavailable-replicas URLs still shows http://localhost:8761/eureka/ (that is on port 8761). 
+# This is only visual discrepancy. Eureka server is correctly up and running on port 5555. 
+# To correct this (to http://localhost:8761/eureka/), we specify this default zone URL.
+eureka.client.service-url.defaultZone = http://localhost:5555/eureka
+
+#eureka.server.enable-self-preservation=false
+#eureka.server.eviction-interval-timer-in-ms=5000
+#eureka.instance.hostname=localhost
+#management.endpoints.web.exposure.include="*"
+#management.endpoint.health.show-details=ALWAYS
+
