--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.prince</groupId>
+	<groupId>com.prince.ms</groupId>
 	<artifactId>bm-discovery-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bm-discovery-service</name>
