ITBM-develop - spelling correction in properties file comment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 
 # Default zone URL is service URL of eureka server itself. If we change the default port of eureka server from 8761 to 5555 
-# and do not specify defaultZone URL and check UI of localhost:5555 (we changes port from 8761 to 5555), 
+# and do not specify defaultZone URL and check UI of localhost:5555 (we changed port from 8761 to 5555), 
 # we will see that in General Info section, registered-replicas and unavailable-replicas URLs still shows http://localhost:8761/eureka/ (that is on port 8761). 
 # This is only visual discrepancy. Eureka server is correctly up and running on port 5555. 
 # To correct this (to http://localhost:8761/eureka/), we specify this default zone URL.
